# pix

./: .clang-format  .clang-tidy  .coveragerc  .gitignore  .readthedocs.yaml  CLAUDE.md  CMakeLists.txt  DEPLOYMENT.md  DESIGN.adoc  MANIFEST.in  Makefile  PIXPY.md  README.md  TODO.md  chat_test.py  diagnose_chat.py  emu.cpp  gendoc.py  mkdocs.yml  pyproject.toml  pyrightconfig.json  quick_test.js  setup.py  stubfix.py  test_chat.js  test_editor.py  test_fixed_chat.py  test_syncchat.py
.github/workflows/: wheels.yml
custom_dir/: no_toc.html
doc/: PREVIEW.adoc  REFERENCE.adoc  style_sheet.css
docs/: CHAT.md  NOTES.md  TALK.md  docinfo.html  index.md  override.css  pixpy_prompt.md  preview.md  reference.adoc  reference.md
examples/: asteroids.py  balls.py  bubbles.py  clock.py  cube-stars.py  cube.py  cube_stars.py  cubes.py  edit_cmd.py  editor.py  example1.py  example2.py  example2_async.py  hello_world.py  intro.py  knight.py  mad.py  name.py  paint.py  pixide.py  raster.py  repl.py  smart_chat.py  sokoban.py  split.py  test_edit_cmd.py  tween.py
examples/utils/: nerd.py  tool_bar.py  wrap.py
pixide/: __init__.py  __main__.py  chat.py  edit_cmd.py  editor.py  ide.py  main.py  markdown.py  openaiclient.py  smart_chat.py  treesitter.py  viewer.py  voice_recorder.py
pixide/data/: instructions.md  pixpy_prompt.md
pixide/utils/: __init__.py  list_box.py  tool_bar.py  tween.py  wrap.py
pyi/pixpy/: __init__.py  __init__.pyi  __main__.py  color.pyi  editor.py  event.pyi  repl.py
python/pixpy/: __init__.py  __init__.pyi  __main__.py  color.pyi  editor.py  event.pyi  key.pyi  treesitter.pyi
python/pixpy/color/: __init__.pyi
python/pixpy/event/: __init__.pyi
python/pixpy/key/: __init__.pyi
server/: CLAUDE.md  Dockerfile  README.md  app.js  fly.toml  jest.config.js  message-sequence.md  package-lock.json  package.json  test_chat.py  tsconfig.json
server/src/: app.ts
server/tests/: chat-server.test.ts
src/: colors.hpp  context.cpp  context.hpp  eglutil.cpp  font.cpp  font.hpp  full_console.cpp  full_console.hpp  glad.h  glfw_system.cpp  image.cpp  image.hpp  image_view.hpp  jpeg_decoder.h  keycodes.h  lib.cpp  machine.hpp  pi_system.cpp  pixel_console.cpp  pixel_console.hpp  python.cpp  screen.hpp  system.hpp  test.cpp  tile_set.cpp  tile_set.hpp  treesitter.cpp  treesitter.hpp  unscii-16.h  utf8.h  utils.h  vec2.hpp
src/gl/: buffer.hpp  color.hpp  functions.hpp  gl.hpp  program.hpp  program_cache.hpp  shader.hpp  texture.hpp
src/python/: class_canvas.hpp  class_console.hpp  class_context.hpp  class_font.hpp  class_image.hpp  class_screen.hpp  class_tileset.hpp  class_vec2.hpp  mod_color.hpp  mod_event.hpp  mod_key.hpp  mod_treesitter.hpp
tests/: __init__.py  test_clipboard.py  test_create_function.py  test_edit_cmd.py  test_editor.py  test_markdown.py  test_text_viewer.py
tools/: launch.py
