[project]
name = "pixpy"
version = "0.1.12"
description = "Graphics library"
authors = [
    {name = "Jonas Minnberg", email="sasq64@gmail.com"}
]
license = {file = "LICENSE.md"}
readme = "docs/index.md"
requires-python = ">=3.7"

[project.urls]
repository = "https://github.com/sasq64/pix"
documentation = "https://pixpy.readthedocs.org"

[build-system]
requires = [
    "setuptools>=42",
    "scikit-build>=0.15",
    "wheel",
    "ninja",
    "cmake>=3.12",
]
build-backend = "setuptools.build_meta"

